<resources>
    <string name="app_name">Goal Tracking</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="goal_view">Goal List</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="add_btn">Add</string>
    <string name="date">Date</string>
    <string name="delete">Delete</string>
    <string name="add_null">Null</string>
    <string name="add_goal">Add Your Goal</string>
    <string name="deadline">Deadline</string>
    <string name="categories">Categories</string>


    <string-array name="categories_item">
        <item>Personal</item>
        <item>Professional</item>
        <item>Health</item>
        <item>Learning</item>
        <item>Performance</item>
        <item>Family</item>
        <item>Financial</item>
        <item>Business</item>

    </string-array>





</resources>