<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:gravity="center"
                android:textSize="25sp"/>
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_deadline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deadline"
            android:layout_marginStart="8dp"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/tv_categories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/categories"
            android:layout_marginStart="8dp"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:layout_marginStart="8dp"
            android:textSize="13sp"/>

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:layout_marginTop="25dp"

            android:textSize="12sp"/>
        
    </LinearLayout>

</androidx.cardview.widget.CardView>